--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Test Project</title>
+  <title>3d presentation</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
   <style>
     body, html {
@@ -26,10 +26,10 @@
     #button {
       position: fixed;
       top: 60%;
-      left: 50.6%;
+      left: 50.55%;
       transform: translate(-50%, -50%);
       display: none; /* Initially hidden */
-      padding: 20px 50px;
+      padding: 20px 30px;
       font-size: 16px;
       color: white;
       background-color: #007bff;
