--- a/index.html
+++ b/index.html
@@ -129,6 +129,6 @@
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/CustomEase.min.js"></script>
-  <script src="/assets/main.js"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
