--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <video id="video" playsinline autoplay loop muted>
     <source src="assets/video.mp4" type="video/mp4">
   </video>
-  <a id="button" class="pulsate" href="/">Some link</a>
+  <a id="button" class="pulsate" href="https://skilllsphere.netlify.app/">Link to portfolio</a>
   <script>
     function calculateLeftPercentage(screenWidth) {
       const x0 = 320;
